--- a/style.css
+++ b/style.css
@@ -385,3 +385,10 @@ html {
 
 body {
   font-family: 'Noto Sans KR', sans-serif; }
+
+h1 {
+  margin: 0; }
+
+a {
+  color: inherit;
+  text-decoration: none; }
