--- a/styles/base/__reset.scss
+++ b/styles/base/__reset.scss
@@ -11,3 +11,12 @@ html {
 body {
   font-family: 'Noto Sans KR', sans-serif;
 }
+
+h1 {
+  margin: 0;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
