--- a/styles/base/__reset.scss
+++ b/styles/base/__reset.scss
@@ -20,3 +20,26 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+button, 
+input, 
+select, 
+textarea {
+  background-color: transparent;
+  border: 0;
+
+  &:focus {
+    outline: none;
+    box-shadow: none;
+  }
+}
+
+a,
+button {
+  cursor: pointer;
+}
+ul,
+ol {
+  padding-left: 0;
+  list-style: none;
+}
