💄 Add color scss

--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/************ colors css  ************/
 /************ icon-svg font import ************/
 @font-face {
   font-family: 'tomorrow';
@@ -414,3 +415,5 @@ ul,
 ol {
   padding-left: 0;
   list-style: none; }
+
+/*# sourceMappingURL=style.css.map */
