--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,8 +1,11 @@
+// 변수 관련 임포트 링크는 항상 상단에 올려주세요.
+/************ colors css  ************/
+@import './constants/_colors';
+
+
 /************ icon-svg font import ************/
 @import './base/_fonts';
-
 /************ normalize css  ************/
 @import './base/_normalize';
-
 /************ reset css  ************/
 @import './base/_reset';
