💄 Add typography scss

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,6 +1,6 @@
 // 변수 관련 임포트 링크는 항상 상단에 올려주세요.
-/************ colors css  ************/
 @import './constants/_colors';
+@import './constants/_typography';
 
 
 /************ icon-svg font import ************/
