--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/************ colors css  ************/
 /************ icon-svg font import ************/
 @font-face {
   font-family: 'tomorrow';
@@ -378,14 +377,18 @@ template {
 /************ reset css  ************/
 * {
   margin: 0;
-  font-family: 'Noto Sans KR', sans-serif;
+  font-family: "Noto Sans KR", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box; }
 
 html {
-  font-family: 'Noto Sans KR', sans-serif; }
+  font-family: "Noto Sans KR", sans-serif;
+  font-size: 16px; }
 
 body {
-  font-family: 'Noto Sans KR', sans-serif; }
+  font-family: "Noto Sans KR", sans-serif;
+  color: #3F4150; }
 
 h1 {
   margin: 0; }
