--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,3 +1,4 @@
+// sass-lint:disable-all
 // 변수 관련 임포트 링크는 항상 상단에 올려주세요.
 @import './constants/_colors';
 @import './constants/_typography';
@@ -15,5 +16,7 @@
 @import './mixins/_responsive';
 @import './mixins/_positions';
 @import './mixins/_flexbox';
+
+@import './modules/_tags';
 
 @import './layouts/_grids';
