💄 implement price ui

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -20,5 +20,6 @@
 @import './modules/_tags';
 @import './modules/_avatars';
 @import './modules/_star-ratings';
+@import './modules/_price';
 
 @import './layouts/_grids';
