💄 implement button ui

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -21,5 +21,6 @@
 @import './modules/_avatars';
 @import './modules/_star-ratings';
 @import './modules/_price';
+@import './modules/_buttons';
 
 @import './layouts/_grids';
