💄 implement form ui

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -22,5 +22,6 @@
 @import './modules/_star-ratings';
 @import './modules/_price';
 @import './modules/_buttons';
+@import './modules/_forms';
 
 @import './layouts/_grids';
