--- a/style.css
+++ b/style.css
@@ -617,6 +617,38 @@ p {
   letter-spacing: -0.02em;
   height: 55px; }
 
+.form-select {
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: -0.01em;
+  color: #3F4150;
+  display: block;
+  width: 100%;
+  height: 40px;
+  padding: 0 16px;
+  background-color: #FFF;
+  border: 1px solid #E0E2E7;
+  border-radius: 4px;
+  appearance: none;
+  transition: background-color 200ms ease-in-out; }
+  .form-select::placeholder {
+    color: #B2B3B9; }
+  .form-select:not(:disabled):hover {
+    background-color: #F7F8FA; }
+  .form-select:disabled {
+    cursor: not-allowed;
+    opacity: 0.4; }
+
+.select-group {
+  position: relative; }
+  .select-group .ic-caret {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 8px;
+    font-size: 24px;
+    color: #B2B3B9; }
+
 /* 
   * MOBILE(< 768px)---------------------------------------------
   * fixture                                sm
