--- a/style.css
+++ b/style.css
@@ -617,7 +617,8 @@ p {
   letter-spacing: -0.02em;
   height: 55px; }
 
-.form-select {
+.form-select,
+.form-input {
   font-size: 16px;
   line-height: 24px;
   letter-spacing: -0.01em;
@@ -629,25 +630,48 @@ p {
   background-color: #FFF;
   border: 1px solid #E0E2E7;
   border-radius: 4px;
-  appearance: none;
-  transition: background-color 200ms ease-in-out; }
-  .form-select::placeholder {
+  transition: background-color 200ms ease-in-out;
+  appearance: none; }
+  .form-select::placeholder,
+  .form-input::placeholder {
     color: #B2B3B9; }
-  .form-select:not(:disabled):hover {
+  .form-select:not(:disabled):hover,
+  .form-input:not(:disabled):hover {
     background-color: #F7F8FA; }
-  .form-select:disabled {
+  .form-select:disabled,
+  .form-input:disabled {
     cursor: not-allowed;
     opacity: 0.4; }
 
 .select-group {
   position: relative; }
+  .select-group.is-active .form-select {
+    border-color: #3DA5F5; }
+  .select-group.is-active .ic-caret {
+    color: #3DA5F5; }
+  .select-group .form-select {
+    padding-right: 40px;
+    text-overflow: ellipsis; }
   .select-group .ic-caret {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
     right: 8px;
     font-size: 24px;
-    color: #B2B3B9; }
+    color: #B2B3B9;
+    pointer-events: none; }
+
+.input-group {
+  position: relative; }
+  .input-group .form-input {
+    padding-left: 40px; }
+  .input-group .ic-search {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 10px;
+    font-size: 20px;
+    color: #8C8D96; }
 
 /* 
   * MOBILE(< 768px)---------------------------------------------
