--- a/styles/modules/__forms.scss
+++ b/styles/modules/__forms.scss
@@ -7,8 +7,8 @@
   background-color: $white;
   border: 1px solid $border;
   border-radius: 4px;
-  appearance: none;
   transition: background-color 200ms ease-in-out;
+  appearance: none;
 
   &::placeholder {
     color: $tertiary;
@@ -22,17 +22,48 @@
   }
 }
 
-.form-select {
+.form-select,
+.form-input {
   @extend %form-base;
 }
 
+// Note: select
 .select-group {
   position: relative;
-
+  
+  &.is-active {
+    .form-select {
+      border-color: $blue;
+    }
+    .ic-caret {
+      color: $blue;
+    }
+  }
+  
+  .form-select {
+    padding-right: 40px;
+    text-overflow: ellipsis;
+  }
   .ic-caret {
     @include pos-center-y;
     right: 8px;
     font-size: 24px;
     color: $tertiary;
+    pointer-events: none;
+  }
+}
+
+// Note: select
+.input-group {
+  position: relative;
+
+  .form-input {
+    padding-left: 40px;
+  }
+  .ic-search {
+    @include pos-center-y;
+    left: 10px;
+    font-size: 20px;
+    color: $secondary;
   }
 }
