💄 implement pagenation ui

--- a/style.css
+++ b/style.css
@@ -673,6 +673,61 @@ p {
     font-size: 20px;
     color: #8C8D96; }
 
+.pagination .page-control, .pagination .page-item a,
+.pagination .page-item button {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: -0.01em;
+  color: #3F4150;
+  height: 26px;
+  font-weight: 700;
+  background-color: #FFF;
+  border-radius: 4px; }
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  .pagination .page-control {
+    border: 1px solid #E0E2E7; }
+    .pagination .page-control:hover {
+      opacity: 0.4; }
+    .pagination .page-control.page-prev {
+      margin-right: 24px; }
+      .pagination .page-control.page-prev .ic-chevron {
+        transform: rotate(90deg); }
+    .pagination .page-control.page-next {
+      margin-left: 24px; }
+      .pagination .page-control.page-next .ic-chevron {
+        transform: rotate(-90deg); }
+    .pagination .page-control .ic-chevron {
+      font-size: 20px; }
+  .pagination .page-list {
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+  .pagination .page-item {
+    margin-right: 4px; }
+    .pagination .page-item.is-active a,
+    .pagination .page-item.is-active button {
+      color: #FFF;
+      background-color: #3DA5F5; }
+      .pagination .page-item.is-active a:hover,
+      .pagination .page-item.is-active button:hover {
+        color: #FFF; }
+    .pagination .page-item:last-child {
+      margin-right: 0; }
+    .pagination .page-item a,
+    .pagination .page-item button {
+      min-width: 26px;
+      padding: 0 4px; }
+      .pagination .page-item a:hover,
+      .pagination .page-item button:hover {
+        color: #3DA5F5; }
+
 /* 
   * MOBILE(< 768px)---------------------------------------------
   * fixture                                sm
