--- a/styles/main.scss
+++ b/styles/main.scss
@@ -23,5 +23,6 @@
 @import './modules/_price';
 @import './modules/_buttons';
 @import './modules/_forms';
+@import './modules/_pagenation';
 
 @import './layouts/_grids';
