♻️ separate icon declarations from fonts.scss

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -21,5 +21,6 @@
 @import './modules/_buttons';
 @import './modules/_forms';
 @import './modules/_pagenation';
+@import './modules/_icons';
 
 @import './layouts/_grids';
